+ Add connection with Google sheets

--- a/contact.html
+++ b/contact.html
@@ -43,12 +43,13 @@
                     </div>
                 </div>
                 <div class="contact-right">
-                    <form>
+                    <form name="submit-to-google-sheet">
                         <input type="text" name="Name" placeholder="Fullname" required>
-                        <input type="email" name="email" placeholder="Email address" required>
-                        <textarea name="message" rows="6" placeholder="Tell me about the project"></textarea>
+                        <input type="email" name="Email" placeholder="Email address" required>
+                        <textarea name="Message" rows="6" placeholder="Tell me about the project"></textarea>
                         <button type="submit" class="btn btn-submit"> Submit Message</button>
                     </form>
+                    <span id="msg"></span>
                 </div>
             </div>
         </div>
@@ -61,7 +62,24 @@
 
 
 
-<script src="main.js"></script>
+    <script>
+        const scriptURL = '<https://script.google.com/macros/s/AKfycbzUEVRyccwxUgSC456_8pfU_gUKINU5ClEBBgfrIFe4X9na9EKECA3XTQPyR1LGTCf6/exec>'
+        const form = document.forms['submit-to-google-sheet']
+        const msg = document.getElementById("msg")
+      
+        form.addEventListener('submit', e => {
+          e.preventDefault()
+          fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+            .then(response => {
+                msg.innerHTML = "Message sent successfully!"
+                setTimeout(function(){
+                    msg.innerHTML = ""
+                }, 5000)
+                form.reset()
+            })
+            .catch(error => console.error('Error!', error.message))
+        })
+      </script>
     
 </body>
 </html>
